Rename `new` and `finalize` to `load` and `store` (#1994)
* Take ownership of `self` in `finalize`

Make it clearer that this is called at the end of the transaction.

* Rename `new` to `load`

Use a name that pairs well with the intended new name for `finalize`:
`store`. It also reflects better what the developer should include in
the method's implementation.

* Rename `Contract::finalize` to `Contract::store`

Make it clearer what the main intention of the method is, so that new
developers have a clearer sense of what must be done at the end of the
transaction.

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -26,7 +26,7 @@ impl Contract for ApplicationContract {{
     type Parameters = ();
     type InstantiationArgument = ();
 
-    async fn new(runtime: ContractRuntime<Self>) -> Self {{
+    async fn load(runtime: ContractRuntime<Self>) -> Self {{
         let state = Application::load(ViewStorageContext::from(runtime.key_value_store()))
             .await
             .expect("Failed to load state");
@@ -39,7 +39,7 @@ impl Contract for ApplicationContract {{
 
     async fn execute_message(&mut self, _message: Self::Message) {{}}
 
-    async fn finalize(&mut self) {{
+    async fn store(mut self) {{
         self.state.save().await.expect("Failed to save state");
     }}
 }}
