Change the Ethereum test code so that the tests are enabled only if the feature ethereum is enabled.

--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -10,6 +10,12 @@ documentation = "https://docs.rs/linera-ethereum/latest/linera_ethereum/"
 license = "Apache-2.0"
 edition = "2021"
 
+[package.metadata.docs.rs]
+features = ["features"]
+
+[features]
+ethereum = []
+
 [dependencies]
 anyhow.workspace = true
 ethers.workspace = true
