--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -105,6 +105,9 @@ jobs:
       run: |
         cd examples
         cargo test --locked
+    - name: Run Ethereum tests
+      run: |
+        cargo test -p linera-ethereum --features ethereum
     - name: Run Witty integration tests
       run: |
         cargo test -p linera-witty --features wasmer,wasmtime
