Minting NFTs with prompts and previews works

--- a/examples/gen-nft/Cargo.toml
+++ b/examples/gen-nft/Cargo.toml
@@ -16,6 +16,8 @@ candle-transformers.workspace = true
 fungible.workspace = true
 getrandom.workspace = true
 linera-sdk.workspace = true
+log.workspace = true
+rand.workspace = true
 serde.workspace = true
 sha3.workspace = true
 tokenizers.workspace = true
