--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -29,7 +29,7 @@ wasmtime = { workspace = true, optional = true }
 
 [dev-dependencies]
 assert_matches.workspace = true
-linera-witty = { workspace = true, features = ["macros", "test"] }
+linera-witty = { path = ".", features = ["macros", "test"] }
 test-case.workspace = true
 tracing.workspace = true
 
