`linera-core`: don't build tests for the Web, since we don't run them anyway

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,8 +72,7 @@ jobs:
         cargo test --locked --no-run
     - name: Compile `linera-core` for the browser
       run: |
-        cargo test -p linera-core \
-          --no-run \
+        cargo build -p linera-core \
           --locked \
           --target wasm32-unknown-unknown \
           --no-default-features \
