Restructuration of the code.

--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -27,7 +27,7 @@ num-traits.workspace = true
 rustc-hex.workspace = true
 serde.workspace = true
 thiserror.workspace = true
-reqwest.workspace = true
+reqwest = { version = "0.12.4" }
 tokio = { workspace = true, features = ["full"] }
 url.workspace = true
 
