Update and pin the version of `async-graphql`
The latest version (7.0.5) unfortunately breaks our code, because of an
arguably semver incompatible change. Therefore, the latest version that
works is pinned.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,9 @@ resolver = "2"
 heck = "0.4.1"
 anyhow = "1.0.80"
 assert_matches = "1.5.0"
-async-graphql = "7.0.2"
-async-graphql-axum = "7.0.2"
+async-graphql = "=7.0.2"
+async-graphql-axum = "=7.0.2"
+async-graphql-derive = "=7.0.2"
 async-lock = "3.3.0"
 async-trait = "0.1.77"
 aws-config = "1.1.7"
