--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,7 +15,7 @@ members = [
 
 [workspace.dependencies]
 assert_matches = "1.5.0"
-async-graphql = { version = "7.0.2", default-features = false }
+async-graphql = { version = "=7.0.2", default-features = false }
 base64 = "0.22.0"
 bcs = "0.1.3"
 candle-core = "0.4.1"
