Ignore that `async-graphql-derive` isn't used
It was added in order to force pin its version so that it matches the
version of `async-graphql`.

--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -57,4 +57,4 @@ test-case.workspace = true
 cfg_aliases.workspace = true
 
 [package.metadata.cargo-machete]
-ignored = ["getrandom", "serde_bytes"]
+ignored = ["async-graphql-derive", "getrandom", "serde_bytes"]
