--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -18,6 +18,7 @@ web = ["getrandom/js", "rand/getrandom", "rand/std", "rand/std_rng"]
 [dependencies]
 anyhow.workspace = true
 async-graphql.workspace = true
+async-graphql-derive.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
 chrono.workspace = true
@@ -50,4 +51,4 @@ linera-base = { path = ".", features = ["test"] }
 cfg_aliases.workspace = true
 
 [package.metadata.cargo-machete]
-ignored = ["getrandom", "serde_bytes"]
+ignored = ["async-graphql-derive", "getrandom", "serde_bytes"]
