--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -18,6 +18,7 @@ web = ["getrandom/js", "rand/getrandom", "rand/std", "rand/std_rng", "web-time"]
 [dependencies]
 anyhow.workspace = true
 async-graphql.workspace = true
+async-graphql-derive.workspace = true
 async-trait.workspace = true
 base64.workspace = true
 bcs.workspace = true
@@ -56,4 +57,4 @@ test-case.workspace = true
 cfg_aliases.workspace = true
 
 [package.metadata.cargo-machete]
-ignored = ["getrandom", "serde_bytes"]
+ignored = ["async-graphql-derive", "getrandom", "serde_bytes"]
