--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -17,16 +17,12 @@ features = ["ethereum"]
 ethereum = []
 
 [dependencies]
+alloy.workspace = true
+alloy-primitives.workspace = true
 anyhow.workspace = true
-ethers.workspace = true
-ethers-core.workspace = true
-ethers-middleware.workspace = true
-ethers-providers.workspace = true
-ethers-signers.workspace = true
 linera-storage-service.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
-rustc-hex.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
