--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,14 @@ members = [
 exclude = ["examples", "scripts"]
 resolver = "2"
 
+[workspace.package]
+version = "0.11.0"
+authors = ["Linera <contact@linera.io>"]
+repository = "https://github.com/linera-io/linera-protocol"
+homepage = "https://linera.dev"
+license = "Apache-2.0"
+edition = "2021"
+
 [workspace.dependencies]
 heck = "0.4.1"
 anyhow = "1.0.80"
