--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-base"
-version = "0.11.0"
 description = "Base definitions, including cryptography, used by the Linera protocol."
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-base/latest/linera_base/"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 test = ["test-strategy", "proptest"]
