--- a/linera-chain/Cargo.toml
+++ b/linera-chain/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-chain"
-version = "0.11.0"
 description = "Persistent data and the corresponding logics used by the Linera protocol for chains of blocks, certificates, and cross-chain messaging."
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-chain/latest/linera_chain/"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 test = ["tokio/macros", "linera-base/test", "linera-execution/test"]
