--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-core"
-version = "0.11.0"
 description = "The core Linera protocol, including client and server logic, node synchronization, etc."
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-core/latest/linera_core/"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
