--- a/linera-explorer/Cargo.toml
+++ b/linera-explorer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "linera-explorer"
-version = "0.11.0"
+version.workspace = true
 edition = "2021"
 description = "Block explorer for the Linera network"
 readme = "README.md"
