--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-storage-service"
-version = "0.11.0"
 description = "RPC shared key value store."
-authors = ["Linera <contact@linera.io>"]
-readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-storage-service/latest/linera_storage_service/"
-license = "Apache-2.0"
-edition = "2021"
+readme = "README.md"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 default = ["rocksdb"]
