--- a/linera-storage/Cargo.toml
+++ b/linera-storage/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-storage"
-version = "0.11.0"
 description = "Storage abstractions for the Linera protocol."
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-storage/latest/linera_storage/"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 test = [
