--- a/linera-version/Cargo.toml
+++ b/linera-version/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-version"
-version = "0.11.0"
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-rpc/latest/linera_rpc/"
 description = "Crate version management for the Linera protocol"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
 async-graphql.workspace = true
