--- a/linera-views-derive/Cargo.toml
+++ b/linera-views-derive/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "linera-views-derive"
-version = "0.11.0"
 description = "The procedural macros for the crate `linera-views`"
-authors = ["Linera <contact@linera.io>"]
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 metrics = []
