--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-views"
-version = "0.11.0"
 description = "A library mapping complex data structures onto a key-value store, used by the Linera protocol"
-authors = ["Linera <contact@linera.io>"]
-readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-views/latest/linera_views/"
-license = "Apache-2.0"
-edition = "2021"
+readme = "README.md"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 # Not used, but here to provide the `js` feature to `rand`
 metadata.cargo-machete.ignored = ["getrandom"]
