--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "linera-witty"
-version = "0.11.0"
 description = "Generation of WIT compatible host code from Rust code"
-authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
-repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-witty/latest/linera_witty/"
-license = "Apache-2.0"
-edition = "2021"
+
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [features]
 default = ["macros"]
