--- a/linera-version/Cargo.toml
+++ b/linera-version/Cargo.toml
@@ -13,6 +13,7 @@ version.workspace = true
 
 [dependencies]
 async-graphql.workspace = true
+async-graphql-derive.workspace = true
 base64.workspace = true
 cargo_metadata.workspace = true
 glob.workspace = true
@@ -31,3 +32,6 @@ quote.workspace = true
 semver.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
+
+[package.metadata.cargo-machete]
+ignored = ["async-graphql-derive"]
