--- a/linera-version/Cargo.toml
+++ b/linera-version/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 
 [dependencies]
 async-graphql.workspace = true
+async-graphql-derive.workspace = true
 base64.workspace = true
 cargo_metadata.workspace = true
 glob.workspace = true
@@ -30,3 +31,6 @@ quote.workspace = true
 semver.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
+
+[package.metadata.cargo-machete]
+ignored = ["async-graphql-derive"]
