--- a/linera-explorer/Cargo.toml
+++ b/linera-explorer/Cargo.toml
@@ -23,7 +23,7 @@ linera-base.workspace = true
 linera-indexer-graphql-client.workspace = true
 linera-service-graphql-client.workspace = true
 once_cell.workspace = true
-reqwest.workspace = true
+reqwest = { version = "0.11.24" }
 serde = { workspace = true, features = [ "derive" ] }
 serde-wasm-bindgen = "0.6"
 serde_json.workspace = true
