--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,7 +101,7 @@ k8s-openapi = { version = "0.21.1", features = ["v1_28"] }
 pathdiff = "0.2.1"
 kube = "0.88.1"
 rcgen = "0.12.1"
-reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
+reqwest = { git = "https://github.com/MathieuDutSik/reqwest", rev = "904df0e029c011fabd05bfe03665b59c91498821", default-features = false, features = ["rustls-tls"] }
 rocksdb = "0.21.0"
 scylla = "0.12.0"
 semver = "1.0.22"
