--- a/linera-indexer/example/Cargo.toml
+++ b/linera-indexer/example/Cargo.toml
@@ -33,7 +33,7 @@ linera-base.workspace = true
 linera-indexer-graphql-client.workspace = true
 linera-service = { workspace = true, features = ["rocksdb", "test"] }
 linera-service-graphql-client.workspace = true
-reqwest.workspace = true
+reqwest = { version  = "0.11.24" }
 serde.workspace = true
 serde_json.workspace = true
 tempfile.workspace = true
