--- a/linera-service-graphql-client/Cargo.toml
+++ b/linera-service-graphql-client/Cargo.toml
@@ -18,7 +18,7 @@ scylladb = ["linera-service/scylladb"]
 [dependencies]
 graphql_client = { version = "0.13", features = [ "reqwest-rustls" ] }
 linera-base.workspace = true
-reqwest.workspace = true
+reqwest = { version = "0.11.24" }
 serde = { workspace = true, features = [ "derive" ] }
 serde_json.workspace = true
 thiserror.workspace = true
