--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -20,6 +20,7 @@ ethereum = []
 alloy-primitives.workspace = true
 anyhow.workspace = true
 async-trait.workspace = true
+linera-base.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 serde.workspace = true
