Introduce an id system that increases.

--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -19,6 +19,7 @@ ethereum = []
 [dependencies]
 alloy-primitives.workspace = true
 anyhow.workspace = true
+async-lock.workspace = true
 async-trait.workspace = true
 linera-base.workspace = true
 num-bigint.workspace = true
