`.github/workflows`: enable testing the `wasmer` feature on the Web

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -80,7 +80,7 @@ jobs:
           --locked \
           --target wasm32-unknown-unknown \
           --no-default-features \
-          --features web
+          --features web,wasmer
     - name: Compile the workspace with the default features (build)
       run: |
         cargo build --locked
