--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -18,16 +18,25 @@ features = ["ethereum"]
 ethereum = []
 
 [dependencies]
-alloy.workspace = true
 alloy-primitives.workspace = true
 anyhow.workspace = true
-linera-storage-service.workspace = true
+async-lock.workspace = true
+async-trait.workspace = true
+linera-base.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 serde.workspace = true
+serde_json = { workspace = true, features = ["raw_value"] }
 thiserror.workspace = true
-tokio = { workspace = true, features = ["full"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth", "provider-http", "json-rpc", "node-bindings", "signer-wallet", "network", "contract" ] }
 url.workspace = true
+tokio = { workspace = true, features = ["full"] }
+linera-storage-service.workspace = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
 
 [build-dependencies]
 cfg_aliases.workspace = true
