Add hex-game example.

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "counter",
     "crowd-funding",
     "fungible",
+    "hex-game",
     "llm",
     "matching-engine",
     "meta-counter",
