--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,8 @@ on:
       - '**/*.md'
       - 'configuration/**'
       - 'kubernetes/**'
+      - 'examples/**'
+      - 'scripts/**'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
