Make the smart contract compile.

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -27,6 +27,7 @@ getrandom = { version = "0.2.12", default-features = false, features = ["custom"
 hex = "0.4.3"
 linera-sdk = { path = "../linera-sdk" }
 linera-views = { path = "../linera-views", default-features = false }
+linera-ethereum = { path = "../linera-ethereum" }
 log = "0.4.20"
 num-bigint = "0.4.3"
 num-traits = "0.2.16"
