GRPC entrypoint to download a blob

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -110,4 +110,5 @@ COPY --from=binaries \
 COPY --chmod=755 \
     docker/server-entrypoint.sh \
     docker/server-init.sh \
+    docker/proxy-init.sh \
     ./
