--- a/kubernetes/linera-validator/templates/proxy.yaml
+++ b/kubernetes/linera-validator/templates/proxy.yaml
@@ -19,7 +19,6 @@ spec:
   type: NodePort
 
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -36,7 +35,6 @@ spec:
   type: NodePort
 
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -53,6 +51,16 @@ spec:
     spec:
       serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
+      initContainers:
+        - name: linera-proxy-initializer
+          image: {{ .Values.lineraImage }}
+          imagePullPolicy: {{ .Values.lineraImagePullPolicy }}
+          command: ["./proxy-init.sh"]
+          env:
+            - name: RUST_LOG
+              value: {{ .Values.logLevel }}
+            - name: RUST_BACKTRACE
+              value: "1"
       containers:
         - name: linera-proxy
           imagePullPolicy: {{ .Values.lineraImagePullPolicy }}
@@ -62,7 +70,14 @@ spec:
               name: linera-port
             - containerPort: 20100
               name: linera-port-int
-          command: ["./linera-proxy"]
+          command:
+            [
+              "./linera-proxy",
+              "--storage",
+              "scylladb:tcp:scylla-client.scylla.svc.cluster.local:9042",
+              "--genesis",
+              "/config/genesis.json",
+            ]
           args: ["/config/server.json"]
           env:
             - name: RUST_LOG
@@ -90,3 +105,5 @@ spec:
             items:
               - key: serverConfig
                 path: server.json
+              - key: genesisConfig
+                path: genesis.json
