--- a/examples/ethereum-tracker/Cargo.toml
+++ b/examples/ethereum-tracker/Cargo.toml
@@ -5,18 +5,19 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dependencies]
+alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
 async-graphql.workspace = true
 linera-ethereum.workspace = true
-linera-sdk.workspace = true
+linera-sdk = { workspace = true, features = [ "ethereum" ]}
 serde.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-linera-sdk = { workspace = true, features = ["test", "wasmer"] }
+linera-sdk = { workspace = true, features = ["test", "wasmer", "ethereum"] }
 tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
 assert_matches.workspace = true
-linera-sdk = { workspace = true, features = ["test"] }
+linera-sdk = { workspace = true, features = ["test", "ethereum"] }
 
 [[bin]]
 name = "ethereum_tracker_contract"
