--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -12,6 +12,7 @@ repository.workspace = true
 version.workspace = true
 
 [features]
+ethereum = []
 default = ["wasmer", "rocksdb"]
 test = ["linera-views/test", "linera-execution/test"]
 benchmark = ["linera-base/test", "dep:linera-sdk", "dep:port-selector"]
@@ -103,7 +104,7 @@ fungible.workspace = true
 linera-base = { workspace = true, features = ["test"] }
 linera-chain = { workspace = true, features = ["test"] }
 linera-core = { workspace = true, features = ["test"] }
-linera-ethereum = { workspace = true }
+linera-ethereum.workspace = true
 linera-execution = { workspace = true, features = ["test"] }
 linera-rpc = { workspace = true, features = ["test"] }
 linera-service = { path = ".", features = ["test"] }
