--- a/examples/ethereum-tracker/Cargo.toml
+++ b/examples/ethereum-tracker/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 
 [dependencies]
 alloy = { workspace = true, default-features = false, features = ["rpc-types-eth"] }
-async-graphql = { workspace = true }
-linera-ethereum = { workspace = true }
+async-graphql.workspace = true
+linera-ethereum.workspace = true
 linera-sdk = { workspace = true, features = [ "ethereum" ] }
-serde = { workspace = true }
+serde.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer", "ethereum"] }
 tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
-assert_matches = { workspace = true }
+assert_matches.workspace = true
 linera-sdk = { workspace = true, features = ["test", "ethereum"] }
 
 [[bin]]
