Make the `ethereum-tracker` example application work  (#2036)
* Change the Json query to a more general system.
* Make the linera-sdk::ethereum functional by using alloy.
* Implement a smart contract that updates the entries of a contract.
* Make a end-to-end test that tests the ethereum-tracker.
Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,6 +162,7 @@ wit-bindgen = "0.24.0"
 linera-base = { version = "0.11.0", path = "./linera-base" }
 linera-chain = { version = "0.11.0", path = "./linera-chain" }
 linera-core = { version = "0.11.0", path = "./linera-core", default-features = false }
+linera-ethereum = { version = "0.11.0", path = "./linera-ethereum", default-features = false }
 linera-execution = { version = "0.11.0", path = "./linera-execution", default-features = false }
 linera-indexer = { path = "./linera-indexer/lib" }
 linera-indexer-graphql-client = { path = "./linera-indexer/graphql-client" }
@@ -181,6 +182,7 @@ linera-service-graphql-client = { version = "0.11.0", path = "./linera-service-g
 
 counter = { path = "./examples/counter" }
 meta-counter = { path = "./examples/meta-counter" }
+ethereum-tracker = { path = "./examples/ethereum-tracker" }
 fungible = { path = "./examples/fungible" }
 native-fungible = { path = "./examples/native-fungible" }
 non-fungible = { path = "./examples/non-fungible" }
