--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -12,6 +12,7 @@ repository.workspace = true
 version.workspace = true
 
 [features]
+ethereum = []
 default = ["wasmer", "rocksdb"]
 test = ["linera-views/test", "linera-execution/test"]
 benchmark = ["linera-base/test", "dep:linera-sdk", "dep:port-selector"]
@@ -93,14 +94,17 @@ tracing-subscriber = { workspace = true, features = ["fmt"] }
 cfg_aliases.workspace = true
 
 [dev-dependencies]
+alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
 amm.workspace = true
 base64.workspace = true
 counter.workspace = true
 crowd-funding.workspace = true
+ethereum-tracker.workspace = true
 fungible.workspace = true
 linera-base = { workspace = true, features = ["test"] }
 linera-chain = { workspace = true, features = ["test"] }
 linera-core = { workspace = true, features = ["test"] }
+linera-ethereum.workspace = true
 linera-execution = { workspace = true, features = ["test"] }
 linera-rpc = { workspace = true, features = ["test"] }
 linera-service = { path = ".", features = ["test"] }
