--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ serde-reflection = "0.3.6"
 sha3 = "0.10.8"
 similar-asserts = "1.5.0"
 static_assertions = "1.1.0"
+stdext = "0.3.3"
 syn = "2.0.52"
 tempfile = "3.10.1"
 test-case = "3.3.1"
